Services/Micro/Azure-authservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantr-auth-service
  namespace: plantr
  labels:
    app: plantr-auth-service
    service: plantr-auth-service
spec:
  selector:
    app: plantr-auth-service-pod
  ports:
    - name: plantr-auth-service
      port: 80
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantr-auth-service
  namespace: plantr
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: plantr-auth-service-pod
      version: latest   
  template:
    metadata:
      labels:
        app: plantr-auth-service-pod
        version: latest
    spec:
      containers:
        - name: plantr-auth-container
          image: ghcr.io/unlegendnl/plantrbackendcomponent:main
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
