Services/Micro/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantr-auth-service
  namespace: plantr
  labels:
    app: plantr-auth-service
    service: plantr-auth-service
spec: 
  selector:
    app: plantr-auth-service-pod
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  type: LoadBalancer  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantr-auth-service
  namespace: plantr
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: plantr-auth-service-pod
      version: latest   
  template:
    metadata:
      labels:
        app: plantr-auth-service-pod
        version: latest
    spec:
      containers:
        - name: plantr-auth-container
          image: ghcr.io/unlegendnl/plantrbackendcomponent:main
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
---
# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: plantr-auth-service-autoscaler
#   namespace: plantr
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: plantr-auth-service
#   minReplicas: 1
#   maxReplicas: 5
#   targetCPUUtilizationPercentage: 75
