Services/Micro/profile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantr-profile-service
  namespace: plantr
  labels:
    app: plantr-profile-service
    service: plantr-profile-service
spec: 
  selector:
    app: plantr-profile-service-pod
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  type: LoadBalancer  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantr-profile-service
  namespace: plantr
spec:
  replicas: 1
  
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: plantr-profile-service-pod
      version: latest   
  template:
    metadata:
      labels:
        app: plantr-profile-service-pod
        version: latest
    spec:
      hostname: plantr-profile-service
      containers:
        - name: plantr-profile-container
          image: unlegendnl/plantrbackendcomponentprofile:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
---
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: plantr-profile-service-autoscaler
   namespace: plantr
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: plantr-profile-service
   minReplicas: 1
   maxReplicas: 5
   targetCPUUtilizationPercentage: 75
