Services/Micro/service_frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: plantr-fe-service
spec:
  selector:
    app: plantr-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
