Services/Micro/ingress_frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plantr-fe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plantr-fe-service
            port:
              number: 80
              
              
              
              
              
              
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: plantr-fe-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: plantr-service
#            port:
#              number: 80
